added blank image boxes and modified responsiveness

--- a/index.html
+++ b/index.html
@@ -34,116 +34,144 @@
 
 	<hr>
 
-	<section id="xv" class="gamelist oddsection xv">
-		<h2>Final Fantasy XV</h2>
+	<section id="xv" class="gamelist xv">
+		<h2>Final Fantasy XV <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>The only crystal left to the world lies in the Kingdom of Lucis. Upon striking a peace with the garrison state of Niflheim, Lucis rejoices in having at last brought the cold war to a close. Their celebrations, however, are premature. Under the guise of amity, Niflheim dispels the anti-armament runewall and launches a full-scale invasion of the kingdom. The peaceful lives Crown Prince Noctis and his entourage once knew are consumed by the flames of war as they struggle to mount a resistance.</p>
-		<img src="xv1.jpg">
-		<img src="xv2.jpg">
+		<figure class="imgleft"><img src="xv1.jpg"></figure>
+		<figure class="imgright"><img src="xv2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="xiv" class="gamelist evensection xiv">
-		<h2>Final Fantasy XIV</h2>
+	<section id="xiv" class="gamelist even xiv">
+		<h2>Final Fantasy XIV <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Fifteen years before the events of the game, metal-clad warriors invaded Eorzea with flame-spewing weapons and colossal airships. The army came from the Garlean Empire, and it didn't take long before the mightiest of the six city-states, Ala Mhigo, fell under their force. The other city-states united their power to defend themselves, but just as fast as it had arrived, the imperial army was gone. A new era began at Eorzea, known as the "Age of Calm", which the city-states spent by building up their defenses and training their armies.
 		Before, the cities had hired mercenaries for their inner wars, but now they trusted only professional soldiers, leaving the sellswords unemployed and restless. To keep them from causing harm and steer their energy into helping others instead, the city-states founded a network of adventuring guilds.</p>
+		<div><figure class="imgtop"><img src="xiv1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="xiv2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="xiii" class="gamelist oddsection xiii">
-		<h2>Final Fantasy XIII</h2>
+	<section id="xiii" class="gamelist xiii">
+		<h2>Final Fantasy XIII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Nova Chrysalia, a world diseased by Chaos. Made up of four regions, a monorail provides transportation for travel throughout this realm. Lightning, the protagonist, begins her final adventure in this plague-ridden land devoid of hope. However, her journey won’t be long, as the Chaos has bled through the soil, drawing near the world’s end.</p>
+		<figure class="imgleft"><img src="xiii1.jpg"></figure>
+		<figure class="imgright"><img src="xiii2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="xii" class="gamelist evensection xii">
-		<h2>Final Fantasy XII</h2>
+	<section id="xii" class="gamelist even xii">
+		<h2>Final Fantasy XII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>The game takes place in the fictional land of Ivalice, where the empires of Archadia and Rozarria are waging an endless war. Dalmasca, a small kingdom, is caught between the warring nations. When Dalmasca is annexed by Archadia, its princess, Ashe, creates a resistance movement. During the struggle, she meets Vaan, a young adventurer who dreams of commanding an airship. They are quickly joined by a band of allies; together, they rally against the tyranny of the Archadian Empire.</p>
+		<div><figure class="imgtop"><img src="xii1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="xii2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="xi" class="gamelist oddsection xi">
-		<h2>Final Fantasy XI</h2>
+	<section id="xi" class="gamelist xi">
+		<h2>Final Fantasy XI <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<figure class="imgleft"><img src="xi1.jpg"></figure>
+		<figure class="imgright"><img src="xi2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="x" class="gamelist evensection x">
-		<h2>Final Fantasy X</h2>
+	<section id="x" class="gamelist even x">
+		<h2>Final Fantasy X <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<div><figure class="imgtop"><img src="x1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="x2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="ix" class="gamelist oddsection ix">
-		<h2>Final Fantasy IX</h2>
+	<section id="ix" class="gamelist ix">
+		<h2>Final Fantasy IX <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<figure class="imgleft"><img src="ix1.jpg"></figure>
+		<figure class="imgright"><img src="ix2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="viii" class="gamelist evensection viii">
-		<h2>Final Fantasy VIII</h2>
+	<section id="viii" class="gamelist even viii">
+		<h2>Final Fantasy VIII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<div><figure class="imgtop"><img src="viii1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="viii2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="vii" class="gamelist oddsection vii">
-		<h2>Final Fantasy VII</h2>
+	<section id="vii" class="gamelist vii">
+		<h2>Final Fantasy VII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<figure class="imgleft"><img src="vii1.jpg"></figure>
+		<figure class="imgright"><img src="vii2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="vi" class="gamelist evensection vi">
-		<h2>Final Fantasy VI</h2>
+	<section id="vi" class="gamelist even vi">
+		<h2>Final Fantasy VI <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<div><figure class="imgtop"><img src="vi1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="vi2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="v" class="gamelist oddsection v">
-		<h2>Final Fantasy V</h2>
+	<section id="v" class="gamelist v">
+		<h2>Final Fantasy V <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<figure class="imgleft"><img src="v1.jpg"></figure>
+		<figure class="imgright"><img src="v2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="iv" class="gamelist evensection iv">
-		<h2>Final Fantasy IV</h2>
+	<section id="iv" class="gamelist even iv">
+		<h2>Final Fantasy IV <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<div><figure class="imgtop"><img src="iv1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="iv2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="iii" class="gamelist oddsection iii">
-		<h2>Final Fantasy III</h2>
+	<section id="iii" class="gamelist iii">
+		<h2>Final Fantasy III <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<figure class="imgleft"><img src="iii1.jpg"></figure>
+		<figure class="imgright"><img src="iii2.jpg"></figure>
 	</section>
 
 	<hr>
 
-	<section id="ii" class="gamelist evensection ii">
-		<h2>Final Fantasy II</h2>
+	<section id="ii" class="gamelist even ii">
+		<h2>Final Fantasy II <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<div><figure class="imgtop"><img src="ii1.jpg"></figure><br>
+		<figure class="imgbottom"><img src="ii2.jpg"></figure></div>
 	</section>
 
 	<hr>
 
-	<section id="i" class="gamelist oddsection i">
-		<h2>Final Fantasy I</h2>
+	<section id="i" class="gamelist i">
+		<h2>Final Fantasy I <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<figure class="imgleft"><img src="i1.jpg"></figure>
+		<figure class="imgright"><img src="i2.jpg"></figure>
 	</section>
 
 	<hr>
 
 	<footer>
-		&copy; 2013 Ethan Niu
+		&copy; 2013 Ethan Niu <span class="toplink"><a href="#top">top</a></span>
 	</footer>
 </body>
 </html>
