--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 
 	<section id="xv" class="gamelist xv">
 		<h2>Final Fantasy XV <span class="toplink"><a href="#top">Top</a></span></h2>
-		<p>The only crystal left to the world lies in the Kingdom of Lucis. Upon striking a peace with the garrison state of Niflheim, Lucis rejoices in having at last brought the cold war to a close. Their celebrations, however, are premature. Under the guise of amity, Niflheim dispels the anti-armament runewall and launches a full-scale invasion of the kingdom. The peaceful lives Crown Prince Noctis and his entourage once knew are consumed by the flames of war as they struggle to mount a resistance.</p>
+		<p>
+			The only crystal left to the world lies in the Kingdom of Lucis. Upon striking a peace with the garrison state of Niflheim, Lucis rejoices in having at last brought the cold war to a close. Their celebrations, however, are premature. Under the guise of amity, Niflheim dispels the anti-armament runewall and launches a full-scale invasion of the kingdom. The peaceful lives Crown Prince Noctis and his entourage once knew are consumed by the flames of war as they struggle to mount a resistance.
+		</p>
+		<p class="review">
+			Review:
+			<br>
+			As this game is still in development, There is currently no review or other information avaliable.
+		</p>
 		<figure class="imgleft"><img src="xv1.jpg"></figure>
 		<figure class="imgright"><img src="xv2.jpg"></figure>
 	</section>
@@ -45,17 +52,28 @@
 
 	<section id="xiv" class="gamelist even xiv">
 		<h2>Final Fantasy XIV <span class="toplink"><a href="#top">Top</a></span></h2>
-		<p>Fifteen years before the events of the game, metal-clad warriors invaded Eorzea with flame-spewing weapons and colossal airships. The army came from the Garlean Empire, and it didn't take long before the mightiest of the six city-states, Ala Mhigo, fell under their force. The other city-states united their power to defend themselves, but just as fast as it had arrived, the imperial army was gone. A new era began at Eorzea, known as the "Age of Calm", which the city-states spent by building up their defenses and training their armies.
-		Before, the cities had hired mercenaries for their inner wars, but now they trusted only professional soldiers, leaving the sellswords unemployed and restless. To keep them from causing harm and steer their energy into helping others instead, the city-states founded a network of adventuring guilds.</p>
-		<div><figure class="imgtop"><img src="xiv1.jpg"></figure><br>
-		<figure class="imgbottom"><img src="xiv2.jpg"></figure></div>
+		<p>
+			Fifteen years before the events of the game, metal-clad warriors invaded Eorzea with flame-spewing weapons and colossal airships. The army came from the Garlean Empire, and it didn't take long before the mightiest of the six city-states, Ala Mhigo, fell under their force. The other city-states united their power to defend themselves, but just as fast as it had arrived, the imperial army was gone. A new era began at Eorzea, known as the "Age of Calm", which the city-states spent by building up their defenses and training their armies.
+			Before, the cities had hired mercenaries for their inner wars, but now they trusted only professional soldiers, leaving the sellswords unemployed and restless. To keep them from causing harm and steer their energy into helping others instead, the city-states founded a network of adventuring guilds.
+		</p>
+		<div>
+			<figure class="imgtop"><img src="xiv1.jpg"></figure><br>
+			<figure class="imgbottom"><img src="xiv2.jpg"></figure>
+		</div>
+		<p class="review">
+			Review:
+			<br>
+			As this game is still in development, There is currently no review or other information avaliable.
+		</p>
 	</section>
 
 	<hr>
 
 	<section id="xiii" class="gamelist xiii">
 		<h2>Final Fantasy XIII <span class="toplink"><a href="#top">Top</a></span></h2>
-		<p>Nova Chrysalia, a world diseased by Chaos. Made up of four regions, a monorail provides transportation for travel throughout this realm. Lightning, the protagonist, begins her final adventure in this plague-ridden land devoid of hope. However, her journey won’t be long, as the Chaos has bled through the soil, drawing near the world’s end.</p>
+		<p>
+			Nova Chrysalia, a world diseased by Chaos. Made up of four regions, a monorail provides transportation for travel throughout this realm. Lightning, the protagonist, begins her final adventure in this plague-ridden land devoid of hope. However, her journey won’t be long, as the Chaos has bled through the soil, drawing near the world’s end.
+		</p>
 		<figure class="imgleft"><img src="xiii1.jpg"></figure>
 		<figure class="imgright"><img src="xiii2.jpg"></figure>
 	</section>
@@ -73,7 +91,9 @@
 
 	<section id="xi" class="gamelist xi">
 		<h2>Final Fantasy XI <span class="toplink"><a href="#top">Top</a></span></h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<p>
+			Final Fantasy XI is set in the Age of Adventurers. It is the 884th year of the Crystal Era, twenty years after the end of the Crystal War that ravaged Vana'diel. The three main nations of Vana'diel, San d'Oria, Bastok and Windurst continue their struggle against the Beastmen who, although less organized, have regrouped and still terrorize the land. Rather than dispatching their own forces to deal with this threat, the nations of Vana'diel begin to employ adventurers to handle them as well as other minor tasks. The player is one such adventurer.
+		</p>
 		<figure class="imgleft"><img src="xi1.jpg"></figure>
 		<figure class="imgright"><img src="xi2.jpg"></figure>
 	</section>
@@ -82,7 +102,9 @@
 
 	<section id="x" class="gamelist even x">
 		<h2>Final Fantasy X <span class="toplink"><a href="#top">Top</a></span></h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<p>
+			Following the exploits of the Summoner Yuna and her guardians as they battle an evil immortal enemy known as Sin, Final Fantasy X is the first title in the franchise to appear on the PlayStation 2. It's also the first game in Squaresoft's popular RPG series to feature voiceovers in addition to written text. Character expressiveness also reaches new heights with the aid of Squaresoft's "Facial Motion System", adding subtle facial expressions to characters in real-time. New side-quests include the underwater sport of Blitzball, and a monster battle arena as well as a redesigned fighting system that mixes classic Final Fantasy elements with a new "Sphere Grid" system.
+		</p>
 		<div><figure class="imgtop"><img src="x1.jpg"></figure><br>
 		<figure class="imgbottom"><img src="x2.jpg"></figure></div>
 	</section>
@@ -91,7 +113,9 @@
 
 	<section id="ix" class="gamelist ix">
 		<h2>Final Fantasy IX <span class="toplink"><a href="#top">Top</a></span></h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
+		<p>
+			The ninth installment in the long-running RPG series and the final for the original PlayStation, Final Fantasy IX gives fans of the franchise the nostalgic thrill of re-experiencing the visual style, gameplay elements and overall spirit of the 16-bit Final Fantasy games of the 8/16 bit eras. The main story centers on Zidane Tribal, a young thief who quickly becomes engaged in a quest to save the world, along with Vivi Ornitier, a young black mage, and Princess Garnet, heir to the throne of Alexandria. The game features detailed polygonal character models and lush pre-rendered backgrounds. They all combine for an unforgettable adventure!
+		</p>
 		<figure class="imgleft"><img src="ix1.jpg"></figure>
 		<figure class="imgright"><img src="ix2.jpg"></figure>
 	</section>
