colored the backgrounds of the boxes, forgot to push yesterday

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	<hr>
 
 	<footer>
-		&copy; 2013 Ethan Niu <span class="toplink"><a href="#top">top</a></span>
+		&copy; 2013 Ethan Niu <span class="toplink"><a href="#top">Top</a></span>
 	</footer>
 </body>
 </html>
