basically finished images, with transforms and transitions

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			As this game is still in development, There is currently no review or other information avaliable.
 		</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
@@ -59,8 +59,8 @@
 			Before, the cities had hired mercenaries for their inner wars, but now they trusted only professional soldiers, leaving the sellswords unemployed and restless. To keep them from causing harm and steer their energy into helping others instead, the city-states founded a network of adventuring guilds.
 		</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 		<p class="review">
 			Review:
@@ -77,8 +77,8 @@
 			Nova Chrysalia, a world diseased by Chaos. Made up of four regions, a monorail provides transportation for travel throughout this realm. Lightning, the protagonist, begins her final adventure in this plague-ridden land devoid of hope. However, her journey won’t be long, as the Chaos has bled through the soil, drawing near the world’s end.
 		</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
@@ -88,8 +88,8 @@
 		<h2>Final Fantasy XII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>The game takes place in the fictional land of Ivalice, where the empires of Archadia and Rozarria are waging an endless war. Dalmasca, a small kingdom, is caught between the warring nations. When Dalmasca is annexed by Archadia, its princess, Ashe, creates a resistance movement. During the struggle, she meets Vaan, a young adventurer who dreams of commanding an airship. They are quickly joined by a band of allies; together, they rally against the tyranny of the Archadian Empire.</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 	</section>
 
@@ -101,8 +101,8 @@
 			Final Fantasy XI is set in the Age of Adventurers. It is the 884th year of the Crystal Era, twenty years after the end of the Crystal War that ravaged Vana'diel. The three main nations of Vana'diel, San d'Oria, Bastok and Windurst continue their struggle against the Beastmen who, although less organized, have regrouped and still terrorize the land. Rather than dispatching their own forces to deal with this threat, the nations of Vana'diel begin to employ adventurers to handle them as well as other minor tasks. The player is one such adventurer.
 		</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
@@ -114,8 +114,8 @@
 			Following the exploits of the Summoner Yuna and her guardians as they battle an evil immortal enemy known as Sin, Final Fantasy X is the first title in the franchise to appear on the PlayStation 2. It's also the first game in Squaresoft's popular RPG series to feature voiceovers in addition to written text. Character expressiveness also reaches new heights with the aid of Squaresoft's "Facial Motion System", adding subtle facial expressions to characters in real-time. New side-quests include the underwater sport of Blitzball, and a monster battle arena as well as a redesigned fighting system that mixes classic Final Fantasy elements with a new "Sphere Grid" system.
 		</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 	</section>
 
@@ -127,8 +127,8 @@
 			The ninth installment in the long-running RPG series and the final for the original PlayStation, Final Fantasy IX gives fans of the franchise the nostalgic thrill of re-experiencing the visual style, gameplay elements and overall spirit of the 16-bit Final Fantasy games of the 8/16 bit eras. The main story centers on Zidane Tribal, a young thief who quickly becomes engaged in a quest to save the world, along with Vivi Ornitier, a young black mage, and Princess Garnet, heir to the throne of Alexandria. The game features detailed polygonal character models and lush pre-rendered backgrounds. They all combine for an unforgettable adventure!
 		</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
@@ -138,8 +138,8 @@
 		<h2>Final Fantasy VIII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 	</section>
 
@@ -149,8 +149,8 @@
 		<h2>Final Fantasy VII <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
@@ -160,8 +160,8 @@
 		<h2>Final Fantasy VI <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 	</section>
 
@@ -171,8 +171,8 @@
 		<h2>Final Fantasy V <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge enlarge"></figure>
 		</div>
 	</section>
 
@@ -182,8 +182,8 @@
 		<h2>Final Fantasy IV <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 	</section>
 
@@ -193,8 +193,8 @@
 		<h2>Final Fantasy III <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
@@ -204,8 +204,8 @@
 		<h2>Final Fantasy II <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgtop"></figure><br>
-			<figure class="imgbottom"></figure>
+			<figure class="imgtop enlarge"></figure><br>
+			<figure class="imgbottom enlarge"></figure>
 		</div>
 	</section>
 
@@ -215,8 +215,8 @@
 		<h2>Final Fantasy I <span class="toplink"><a href="#top">Top</a></span></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt, nisi id tempus pulvinar, enim nunc iaculis lacus, et tincidunt lacus neque eget felis. Donec aliquet risus id magna faucibus, vitae faucibus erat gravida. Proin aliquet, libero ut suscipit dictum, mauris lacus euismod neque, vel euismod ante sapien et sem. Fusce vestibulum elit et nisi ultrices, sed tempor turpis lacinia. Nulla euismod blandit orci, nec volutpat magna interdum convallis. Aliquam tincidunt dolor et enim semper rutrum sit amet vitae libero. Cras in fringilla augue. Quisque iaculis sodales tincidunt.</p>
 		<div>
-			<figure class="imgleft"></figure>
-			<figure class="imgright"></figure>
+			<figure class="imgleft enlarge"></figure>
+			<figure class="imgright enlarge"></figure>
 		</div>
 	</section>
 
