modified carousel, colored arrows and added real images

--- a/index.html
+++ b/index.html
@@ -333,44 +333,44 @@
       <div class="wrapper" style="overflow: hidden;">
         <ul>
         	<li class="cloned">
-        		<img src="http://farm4.static.flickr.com/3022/3047034531_9c74359401_s.jpg" height="125" width="250" alt="Wonky Buildings">
+        		<img src="img/carousel/gameplay1.jpg" height="125" width="250" alt="Wonky Buildings">
         	</li>
         	<li class="empty cloned"></li>
         	<li>
-        		<img src="http://farm4.static.flickr.com/3011/3047035327_ca12fb2397_s.jpg" height="125" width="250" alt="Tall Glow">
+        		<img src="img/carousel/gameplay2.jpg" height="125" width="250" alt="Tall Glow">
         	</li>
         	<li class="empty cloned"></li>
         	<li>
-        		<img src="http://farm4.static.flickr.com/3048/3047871878_84bfacbd35_s.jpg" height="125" width="250" alt="Rockefella">
+        		<img src="img/carousel/gameplay3.jpg" height="125" width="250" alt="Rockefella">
         	</li>
            	<li class="empty cloned"></li>
         	<li>
-        		<img src="http://farm4.static.flickr.com/3220/3047034929_97eaf50ea3_s.jpg" height="125" width="250" alt="Chrysler Reflect">
+        		<img src="img/carousel/gameplay4.jpg" height="125" width="250" alt="Chrysler Reflect">
         	</li>
            	<li class="empty cloned"></li>
         	<li>
-        		<img src="http://farm4.static.flickr.com/3164/3047871624_2cacca4684_s.jpg" height="125" width="250" alt="Chrysler Up">
+        		<img src="img/carousel/gameplay5.jpg" height="125" width="250" alt="Chrysler Up">
         	</li>
            	<li class="empty cloned"></li>
         	<li>
-        		<img src="http://farm4.static.flickr.com/3022/3047034531_9c74359401_s.jpg" height="125" width="250" alt="Wonky Buildings">
+        		<img src="img/carousel/gameplay6.jpg" height="125" width="250" alt="Wonky Buildings">
         	</li>
         	<li class="empty cloned"></li>
          	<li>
-         		<img src="http://farm4.static.flickr.com/3199/3047034451_121c93386f_s.jpg" height="125" width="250" alt="Leaves of Fall">
+         		<img src="img/carousel/gameplay7.jpg" height="125" width="250" alt="Leaves of Fall">
          	</li>
         	<li class="empty"></li>
         	<li class="cloned">
-        		<img src="http://farm4.static.flickr.com/3011/3047035327_ca12fb2397_s.jpg" height="125" width="250" alt="Tall Glow">
+        		<img src="img/carousel/gameplay8.jpg" height="125" width="250" alt="Tall Glow">
         	</li>
-        	<li class="empty cloned"></li>
+        	<!-- <li class="empty cloned"></li>
         	<li class="cloned">
         		<img src="http://farm4.static.flickr.com/3184/3047872076_61a511a04b_s.jpg" height="125" width="250" alt="Wet Cab">
         	</li>
         	<li class="empty cloned"></li>
         	<li class="cloned">
         		<img src="http://farm4.static.flickr.com/3048/3047871878_84bfacbd35_s.jpg" height="125" width="250" alt="Rockefella">
-        	</li>
+        	</li> -->
         </ul>        
       </div>
       <a class="arrow back">&lt;</a>
