--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Final Fantasy: A History</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" type="image/ico" href="img/favicon.ico">
+	<!-- <link rel="icon" type="image/ico" href="img/favicon.ico"> -->
+	<link rel="icon" type="image/png" href="img/favicon.png">
 	<script type="text/javascript" src="javascripts/main.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript">
