--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 		<p>
 			The only crystal left to the world lies in the Kingdom of Lucis. Upon striking a peace with the garrison state of Niflheim, Lucis rejoices in having at last brought the cold war to a close. Their celebrations, however, are premature. Under the guise of amity, Niflheim dispels the anti-armament runewall and launches a full-scale invasion of the kingdom. The peaceful lives Crown Prince Noctis and his entourage once knew are consumed by the flames of war as they struggle to mount a resistance.
 		</p>
-		<p class="review">
+		<div class="review">
 			Review:
 			<br>
 			As this game is still in development, There is currently no review or other information avaliable.
-		</p>
+		</div>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -137,14 +137,14 @@
 			Before, the cities had hired mercenaries for their inner wars, but now they trusted only professional soldiers, leaving the sellswords unemployed and restless. To keep them from causing harm and steer their energy into helping others instead, the city-states founded a network of adventuring guilds.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
-		<p class="review">
+		<div class="review">
 			Review:
 			<br>
 			As this game is still in development, There is currently no review or other information avaliable.
-		</p>
+		</div>
 	</section>
 
 	<hr>
@@ -154,28 +154,26 @@
 		<p>
 			Nova Chrysalia, a world diseased by Chaos. Made up of four regions, a monorail provides transportation for travel throughout this realm. Lightning, the protagonist, begins her final adventure in this plague-ridden land devoid of hope. However, her journey won’t be long, as the Chaos has bled through the soil, drawing near the world’s end.
 		</p>
-		<p class="review">
+		<div class="review">
 			Review:
 			<br>
 			<strong>9.5</strong>
 			<h4>Presentation</h4>
-			<p>Unbelievably gorgeous cutscenes, polished interfaces and a great story.</p>
-			9
-			Graphics
-			Character models are excellent and some of the in-game environments are breathtaking. Occasional slowdown isn't enough to detract from the visuals overall.
-			9
-			Sound
-			Incredibly impressive voice acting all around. Vanille's perkiness can take some getting used to, but the entire cast is great. Music is not as memorable as past Final Fantasy titles, but it's good.
-			8.5
-			Gameplay
-			Fantastic battle system that combines frantic speed with plenty of rewards. Linear structure and lack of content outside of main quest is somewhat disappointing.
-			8.5
-			Lasting Appeal
-			My first play through took me about 60 hours to complete. Although it's a shame there are no fun mini-games to serve as distractions, there are still plenty of side missions to enjoy.
-		</p>
+			<p>Amazing cutscenes, polished interfaces and a great story.</p>
+			<strong>9</strong>
+			<h4>Graphics</h4>
+			<p>Character are excellent and in-game environments are breathtaking. Some lag but isn't enough to hurt the visuals overall.</p>
+			<strong>9</strong>
+			<h4>Sound</h4>
+			<p>Great voice acting. Music is not as memorable as past Final Fantasies, but it's good.</p>
+			<strong>8.5</strong>
+			<h4>Gameplay</h4>
+			<p>Fantastic battle system with both high speeds and lots of rewards. Lack of side quests and content is somewhat disappointing.</p>
+			<h3>8.9 Overall</h3>
+		</div>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -186,14 +184,26 @@
 		<p>
 			The game takes place in the fictional land of Ivalice, where the empires of Archadia and Rozarria are waging an endless war. Dalmasca, a small kingdom, is caught between the warring nations. When Dalmasca is annexed by Archadia, its princess, Ashe, creates a resistance movement. During the struggle, she meets Vaan, a young adventurer who dreams of commanding an airship. They are quickly joined by a band of allies; together, they rally against the tyranny of the Archadian Empire.
 		</p>
-		<p class="review">
+		<div>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
+		</div>
+		<div class="review">
 			Review:
 			<br>
-			As this game is still in development, There is currently no review or other information avaliable.
-		</p>
-		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<strong>10</strong>
+			<h4>Presentation</h4>
+			<p>Very fast load times, one of the best storylines ever, and a gigantic world.</p>
+			<strong>10</strong>
+			<h4>Graphics</h4>
+			<p>A PS2 technical accomplishment in every sense. Almost no slow-down, detail is incredible, animations are great, and the artistic design is awesome.</p>
+			<strong>9</strong>
+			<h4>Sound</h4>
+			<p>Voice actors play out the storyline perfectly and the sound effects are varied and first-rate. Musically, it isn't the best, but is still very gppd.</p>
+			<strong>9</strong>
+			<h4>Gameplay</h4>
+			<p>Full-camera control and new enemy AI make for a Final Fantasy like no other. Best of all, it's fun AND challenging.</p>
+			<h3>9.5 Overall</h3>
 		</div>
 	</section>
 
@@ -205,8 +215,24 @@
 			Final Fantasy XI is set in the Age of Adventurers. It is the 884th year of the Crystal Era, twenty years after the end of the Crystal War that ravaged Vana'diel. The three main nations of Vana'diel, San d'Oria, Bastok and Windurst continue their struggle against the Beastmen who, although less organized, have regrouped and still terrorize the land. Rather than dispatching their own forces to deal with this threat, the nations of Vana'diel begin to employ adventurers to handle them as well as other minor tasks. The player is one such adventurer.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
+		</div>
+		<div class="review">
+			Review:
+			<br>
+			<strong>8</strong>
+			<h4>Presentation</h4>
+			<p>As Final Fantasy is a online MMORPG, the world is large, although load times can be slower.</p>
+			<strong>6</strong>
+			<h4>Graphics</h4>
+			<p>The graphics were somewhat sacrificed in XI due to the multiplayer aspect. Even with the reduced graphics, the cutscenes and unique characters make the game colorful and </p>
+			<strong>9</strong>
+			<h4>Sound</h4>
+			<p>The music is nothing memorable however it follows the standard set by previous Final Fantasies in that it is still great.</p>
+			<strong>8</strong>
+			<h4>Gameplay</h4>
+			<p></p>
 		</div>
 	</section>
 
@@ -218,8 +244,8 @@
 			Following the exploits of the Summoner Yuna and her guardians as they battle an evil immortal enemy known as Sin, Final Fantasy X is the first title in the franchise to appear on the PlayStation 2. It's also the first game in Squaresoft's popular RPG series to feature voiceovers in addition to written text. Character expressiveness also reaches new heights with the aid of Squaresoft's "Facial Motion System", adding subtle facial expressions to characters in real-time. New side-quests include the underwater sport of Blitzball, and a monster battle arena as well as a redesigned fighting system that mixes classic Final Fantasy elements with a new "Sphere Grid" system.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
 	</section>
 
@@ -231,8 +257,8 @@
 			The ninth installment in the long-running RPG series and the final for the original PlayStation, Final Fantasy IX gives fans of the franchise the nostalgic thrill of re-experiencing the visual style, gameplay elements and overall spirit of the 16-bit Final Fantasy games of the 8/16 bit eras. The main story centers on Zidane Tribal, a young thief who quickly becomes engaged in a quest to save the world, along with Vivi Ornitier, a young black mage, and Princess Garnet, heir to the throne of Alexandria. The game features detailed polygonal character models and lush pre-rendered backgrounds. They all combine for an unforgettable adventure!
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -246,8 +272,8 @@
 			<br><br>—Official Introduction
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
 	</section>
 
@@ -264,8 +290,8 @@
 			<br><br>—Official Introduction
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -277,8 +303,8 @@
 			Learn From The Past. Many centuries have passed since the war of the Magi - civilisations have been rebuilt with iron, machines and technology. But the forces of magic have begun to return, and when an ancient Esper is discovered, the risk of war resurfaces. Featuring all-new CG cinematic sequences exclusive to this edition. Discover the origins of special featurs later developed in the subsequent FINAL FANTASY series, including summoning magic, mini quests, the Active Time Battle system and much more Numerous weapons, items, magic spells and special skills allow for incredible gameplay depth and strategy
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
 	</section>
 
@@ -290,8 +316,8 @@
 			The game centers around a group of four strangers brought together by circumstance to save the Crystals that have mysteriously begun shattering one by one. The one behind the phenomenon is the villain Exdeath, as part of a plan to release himself from imprisonment and to gain the power of the Void, a realm of nothingness, which could bestow absolute power on one able to resist being absorbed by it. The four Warriors of Light turn their attentions to defeating Exdeath and stopping the Void's energies from consuming their world.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -303,8 +329,8 @@
 			The game's story follows Cecil, a dark knight, as he tries to prevent the sorcerer Golbez from seizing powerful crystals and destroying the world. He is joined on this quest by a frequently changing group of allies, several of whom die, become injured, or are otherwise incapacitated by an unfortunate occurrence. Final Fantasy IV introduced innovations that became staples of the Final Fantasy series and role-playing games in general. Its "Active Time Battle" system was used in five subsequent Final Fantasy games, and unlike prior games in the series, IV gave each character their own unchangeable character class.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
 	</section>
 
@@ -316,8 +342,8 @@
 			An earthquake opens up a previously hidden cavern in Altar Cave near the village of Ur on the floating continent. Four young orphans under the care of Topapa, the village elder, explore the earthquake's impact and come across a crystal of light. The crystal grants them a portion of its power, and instructs them to go forth and restore balance to the world. Not knowing what to make of the crystal's pronouncements, but nonetheless recognizing the importance of its words, the four inform their adoptive family of their mission and set out to explore an overworld outside the area in which they were brought up, in order to bring balance back to the world.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -329,8 +355,8 @@
 			The game's story centers on four youths whose parents were killed during an army invasion by the empire of Palamecia. Three of the four main characters join a rebellion against the empire, embarking on missions to gain new magic and weapons, destroy enemy superweapons, and rescue leading members of the resistance. After defeating the empire and the Emperor, the trio discovers that the fourth youth, now a dark knight, has taken the place of the previous emperor and is preparing to attack the rebellion. Upon confronting him, the Emperor reappears as a demon and prepares to destroy the world. However, the four characters agree to join forces to defeat him, and ultimately they destroy him in his demonic castle. The Game Boy Advance remake adds a bonus story after the game is completed, following several side characters who died during the game as they attempt to defeat an alternate version of the Emperor.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgtop"></figure><br>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgbottom"></figure>
+			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
+			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
 	</section>
 
@@ -342,8 +368,8 @@
 			Players guide the Warriors of Light as they set out on a quest to restore the crystals to their former luster. Its side view battles, choice and promotion of character classes, and sprawling world explored with fantastic vehicles quickly became standards of the series. This game set the stage for all FINAL FANTASY games to come.
 		</p>
 		<div>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgleft"></figure>
-			<figure onclick="return enlarge(this)" id="enlarge" class="imgright"></figure>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
